[package]
authors = ["DEIP world <https://github.com/DEIPworld>"]
name = "common-deip-call"
version = "0.0.0"
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive", "full"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

deip_serializable_u128 = { path = "../deip_serializable_u128", default-features = false }

frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false }
node-runtime = { package = "appchain-deip-runtime", path = "../../runtime", default-features = false }
pallet-deip = { path = "../../pallets/deip", default-features = false }
pallet-deip-assets = { path = "../../pallets/deip_assets", default-features = false }
pallet-deip-dao = { path = "../../pallets/deip_dao", default-features = false }
pallet-deip-proposal = { path = "../../pallets/deip_proposal", default-features = false }
pallet-deip-crowdfunding = { path = "../../pallets/deip_crowdfunding", default-features = false }
serde = { version = "1.0.130", features = ["derive"], optional = true }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "serde",
    "frame-support/std",
    "node-runtime/std",
    "sp-runtime/std",
    "sp-std/std",
    "deip_serializable_u128/std",
    "pallet-deip-proposal/std",
    "pallet-deip-dao/std",
    "pallet-deip/std",
    "pallet-deip-assets/std",
    "pallet-deip-crowdfunding/std",
]
