[package]
authors = ['DEIP world <https://github.com/DEIPworld>']
name = "common-deip-rpc"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc-core = "15.0"
frame-support = { default-features = false, version = '3.0.0' }
sc-rpc-api = '0.9.0'
sp-core = { default-features = false, version = '3.0.0' }
sp-runtime = { version = '3.0.0', default-features = false }
serde = { version = "1.0.123", features = ["derive"] }

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'
