[package]
name = "deip-storage-ops"
version = "0.1.0"
edition = "2018"
description = "Set of abstractions over storage operations"
authors = ["DEIP world <https://github.com/DEIPworld>"]
homepage = "https://deip.world/"
license = "Apache-2.0"
repository = "https://github.com/DEIPworld/deip-polkadot"

[dependencies]
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false }

[features]
default = ["std"]
std = [
    "sp-std/std", 
]
