[package]
authors = ['DEIP world <https://github.com/DEIPworld>']
description = 'FRAME pallet defined DEIP porjects'
edition = '2018'
homepage = 'https://deip.world/'
license = 'Apache-2.0'
name = 'pallet-deip'
repository = 'https://github.com/DEIPworld/deip-polkadot'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
frame-support = { default-features = false, version = '3.0.0' }
pallet-timestamp = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }
sp-runtime = { version = '3.0.0', default-features = false }
sp-core = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }
serde = { version = "1.0.119", optional = true, features = ["derive"]}
deip-assets-error = { path = "../../deip_common/deip_assets_error", default-features = false }
sp-api = { version = '3.0.0', default-features = false}

[dev-dependencies]
pallet-balances = { default-features = false, version = '3.0.0' }
pallet-assets = { default-features = false, version = '3.0.0' }
#pallet-deip-assets = { path = "../deip_assets", default-features = false }
parking_lot = "0.11.1"

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
    'sp-runtime/std',
    'sp-core/std',
    'sp-io/std',
    'pallet-timestamp/std',
    'serde',
    "sp-api/std"
]
