[package]
authors = ["DEIP world <https://github.com/DEIPworld>"]
description = "FRAME pallet that wraps Substrate uniques"
edition = "2018"
homepage = "https://deip.world/"
license = "Apache-2.0"
name = "pallet-deip-f-nft"
repository = "https://github.com/DEIPworld/deip-canary-network"
version = "3.0.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", default-features = false }

pallet-deip-assets = { path = "../deip_assets", default-features = false }
pallet-deip-uniques = { path = "../deip_uniques", default-features = false }


[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "pallet-deip-assets/std",
    "pallet-deip-uniques/std",
]