[package]
authors = ['DEIP world <https://github.com/DEIPworld>']
description = 'FRAME pallet defines DEIP Portal module'
edition = '2018'
homepage = 'https://deip.world/'
license = 'Apache-2.0'
name = 'pallet-deip-portal'
repository = 'https://github.com/DEIPworld/deip-polkadot'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }
sp-runtime = { version = '3.0.0', default-features = false }
sp-core = { default-features = false, version = '3.0.0' }
serde = { version = "1.0.123", optional = true, features = ["derive"]}
#pallet-deip-toolkit = { path = "../deip_toolkit", default-features = false }
sp-api = { version = '3.0.0', default-features = false}
sp-io = { default-features = false, version = '3.0.0' }
deip-transaction-ctx = { path = "../../deip_common/deip_transaction_ctx", default-features = false }

[dev-dependencies]
sp-runtime = { default-features = false, version = '3.0.0' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std', 
    'sp-io/std',
    'serde',
#    'pallet-deip-toolkit/std',
    "sp-api/std",
    'deip-transaction-ctx/std'
]
